# continuityos

./: .env.example  .gitignore  .gitleaks.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  RELEASE_REPORT.md  ROADMAP-50-STATUS.md  ROADMAP-50.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.pinned.txt
deploy/: README.md  continuityos-backup.service  continuityos-backup.timer  continuityos-caddy-route.service  continuityos-caddy-route.timer  continuityos.service  ensure_caddy_route.py
docs/: ARCHITECTURE.md  CANADIAN_PROCUREMENT_RESEARCH_2026.md  CANADIAN_PUBLIC_DATA_SOURCE_MAP_2026.md  CONTRACT_AND_SYSTEM_POSITIONING_2026.md  CUSTOMER_TELEMETRY_AND_LABEL_CONTRACT_2026.md  DATA_SOURCES.md  DEPENDENCIES.md  DEPLOYMENT.md  GO_LIVE_SECURITY_CLOSURE_2026.md  INTEROPERABILITY_PROFILE_2026.md  KEY_ROTATION.md  MULTIVARIATE_ANALYSIS.md  NATIONAL_SECURITY_POSTURE.md  NOVELTY.md  OPERATIONS_RUNBOOK_2026.md  OPERATOR_ONBOARDING.md  PLATFORM_POSITIONING_RESEARCH_2026.md  PRIOR_ART.md  PUBLIC_DATA_CATALOG_2026.md  PUBLIC_DATA_TERMS_AND_CONTROL_MAP_2026.md  THREAT_MODEL.md
examples/: arctic_dependency_graph.yaml  arctic_maritime_logistics.yaml
scripts/: backup_data.sh  demo.py  demo_check.sh  docker_bootstrap.sh  drift_check.sh  evidence_smoke.py  go_live_doctor.sh  iac_verify.sh  install.sh  public_data_probe.py  public_indicator_probe.py  restore_data.sh  smoke_live.sh  status.sh  strategic_ingest.py  strategic_watchdog.py  validate_nsidc_snapshot.py  validate_regression_dataset.py  verify_backup.sh  verify_release.sh
tests/: conftest.py  test_api.py  (+19 more)
(+29 files in other folders)
