[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "continuityos-reference"
version = "0.1.0"
description = "Cyber-physical continuity assurance reference implementation for critical trade corridors"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "ContinuityOS Reference Architecture" }]
dependencies = [
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "orjson==3.11.9",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "PyYAML==6.0.3",
  "uvicorn[standard]==0.48.0",
  "cryptography==49.0.0",
  "starlette==1.3.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-cov==7.0.0",
  "ruff==0.16.0",
  "mypy==2.3.0",
  "types-PyYAML==6.0.12.20260518",
]

[project.scripts]
continuityos = "continuityos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
packages = ["continuityos"]

[tool.coverage.run]
omit = ["src/continuityos/cli.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
